[gd_scene load_steps=3 format=3 uid="uid://combat_animal_item"]

[ext_resource type="Script" path="res://scripts/ui/gameplay/combat_animal_item.gd" id="1_item_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.2, 0.18, 0.15, 0.8)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.4, 0.35, 0.3, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 10.0
content_margin_top = 8.0
content_margin_right = 10.0
content_margin_bottom = 8.0

[node name="CombatAnimalItem" type="PanelContainer"]
custom_minimum_size = Vector2(0, 56)
theme_override_styles/panel = SubResource("StyleBoxFlat_normal")
script = ExtResource("1_item_script")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SelectionIndicator" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚òê"
vertical_alignment = 1

[node name="AnimalIcon" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "üê∞"
vertical_alignment = 1

[node name="InfoContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="NameRow" type="HBoxContainer" parent="HBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="HBoxContainer/InfoContainer/NameRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Rabbit #1"
vertical_alignment = 1

[node name="StatusBadge" type="Label" parent="HBoxContainer/InfoContainer/NameRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.76, 0.31, 1)
theme_override_font_sizes/font_size = 12
text = "Idle"
vertical_alignment = 1

[node name="StatsRow" type="HBoxContainer" parent="HBoxContainer/InfoContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="StrengthLabel" type="Label" parent="HBoxContainer/InfoContainer/StatsRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "üí™ 3"
vertical_alignment = 1

[node name="EnergyContainer" type="HBoxContainer" parent="HBoxContainer/InfoContainer/StatsRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="EnergyIcon" type="Label" parent="HBoxContainer/InfoContainer/StatsRow/EnergyContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "‚ö°"
vertical_alignment = 1

[node name="EnergyBar" type="ProgressBar" parent="HBoxContainer/InfoContainer/StatsRow/EnergyContainer"]
custom_minimum_size = Vector2(60, 12)
layout_mode = 2
max_value = 100.0
value = 80.0
show_percentage = false

[node name="EnergyLabel" type="Label" parent="HBoxContainer/InfoContainer/StatsRow/EnergyContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "80%"
vertical_alignment = 1

[node name="DisabledOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 2
color = Color(0, 0, 0, 0.5)
mouse_filter = 2

[node name="DisabledLabel" type="Label" parent="DisabledOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -10.0
offset_right = 60.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.96, 0.26, 0.21, 1)
theme_override_font_sizes/font_size = 14
text = "Needs rest"
horizontal_alignment = 1
vertical_alignment = 1
